# interview_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build-docker.sh  docker-compose.yml  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml
examples/: resume.md  run_interview.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Chat.js  Results.js  i18n.js  setupProxy.js
interview_agent/: __init__.py  __main__.py  core.py  logger.py  nodes.py  parser.py  routing.py  server.py  types.py  workflow.py
src/: App.css  App.js
src/pages/: ConfigPage.js  InterviewPage.js  PreparePage.js  ResultPage.js  ShareModal.js  StartPage.js
src/services/: deepseekService.js  openaiService.js
tests/: test_api.py  test_parser.py
